# GitCommitGenerator

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: git_behavior.rs
