[package]
name = "gitcommitgenerator"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "AI-powered Git commit message generator with configurable OpenAI-compatible LLM support."

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "env"] }
dirs = "6.0.0"
reqwest = { version = "0.12.20", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shell-words = "1.1.0"
toml = "0.8.23"

[dev-dependencies]
tempfile = "3.20.0"
